objects/Archive_Job_Item__c.object
<CustomObject>
    <fields>
        <fullName>Archive_External_Link__c</fullName>
        <label>Archive External Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Last_Ran_DateTime__c</fullName>
        <label>Last Ran DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Range_End_Date__c</fullName>
        <label>Range End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Range_Start_Date__c</fullName>
        <label>Range Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Range__c</fullName>
        <description>Archive Range. For example date range, ID range, String range, Number range used to archive the records</description>
        <label>Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Description__c</fullName>
        <label>Status Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                    <default>true</default>
                    <label>Scheduled</label>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Succeeded</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Archive Job Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AJI-{0000}</displayFormat>
        <label>Archive Job Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Archive Job Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>